Start working the translation

--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -146,7 +146,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-envelope"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Email</strong>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.EMAIL'|translate}}</strong>
                             </div>
                         </div>
                     </div>
@@ -164,8 +164,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Legacy
-                                Questionnaire</strong></div>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.LEGACY_QUESTIONNAIRE'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
@@ -179,7 +178,7 @@
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Administration</h2>
+                      <h2>{{'NAVIGATION_MENU.ADMINISTRATION'|translate}}</h2>
                     </span>
                 </div>
             </div>
@@ -196,8 +195,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-stethoscope"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Diagnosis
-                                Translation</strong></div>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.DIAGNOSIS_TRANSLATION'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
@@ -212,8 +210,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-time"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Cron
-                                Logs</strong></div>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.CRON_LOGS'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
@@ -230,7 +227,7 @@
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-address-card"
                                   aria-hidden="true"></span>
                             <div class="side-panel-title" style="display:inline-block;margin:0">
-                                <strong>Patients</strong></div>
+                                <strong>{{'NAVIGATION_MENU.PATIENTS'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
@@ -246,8 +243,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-user-plus"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Patient
-                                Registration</strong></div>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.PATIENT_REGISTRATION'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
@@ -263,8 +259,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-hourglass-half"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Patient
-                                Activity</strong></div>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.PATIENT_ACTIVITY'|translate}}</strong></div>
                         </div>
                     </div>
                 </div>
@@ -279,7 +274,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="fa fa-users"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Users</strong>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.USERS'|translate}}</strong>
                             </div>
                         </div>
                     </div>
@@ -294,7 +289,7 @@
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Profile</h2>
+                      <h2>{{'NAVIGATION_MENU.PROFILE'|translate}}</h2>
                     </span>
                 </div>
             </div>
@@ -311,7 +306,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-cog"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Account</strong>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.ACCOUNT'|translate}}</strong>
                             </div>
                         </div>
                     </div>
@@ -327,7 +322,7 @@
                         <div class="panel-content">
                             <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-log-out"
                                   aria-hidden="true"></span>
-                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Logout</strong>
+                            <div class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'NAVIGATION_MENU.LOGOUT'|translate}}</strong>
                             </div>
                         </div>
                     </div>
