--- a/templates/idle-warning-modal.html
+++ b/templates/idle-warning-modal.html
@@ -1,10 +1,10 @@
 <div class="modal-header warning">
 	<h2 class="modal-title">
-		<span class="glyphicon glyphicon-warning-sign" style="font-size:30px;"></span>
-		You're Idle. Do Something!
+		<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+		{{'LOGIN.IDLE'|translate}}
 	</h2>
 </div>
 <div idle-countdown="countdown" ng-init="countdown=15" class="modal-body">
-	<p>You'll be logged out in <span class="label label-warning">{{countdown}}</span> <span ng-pluralize="" count="countdown" when="{'one': 'second', 'other': 'seconds'}"></span>.</p>
+	<p>{{'LOGIN.COUNTDOWN'|translate}}<span class="label label-warning">{{countdown}}</span> <span ng-pluralize="" count="countdown" when="{'one': '{{&quot;LOGIN.SECOND&quot; | translate}}', 'other': '{{&quot;LOGIN.SECONDS&quot; | translate}}'}"></span>.</p>
 	<uib-progressbar max="15" value="countdown" animate="true" class="progress-striped active" type="warning"></uib-progressbar>
 </div>
