Adding translation to question list page

--- a/templates/questionnaire/question.html
+++ b/templates/questionnaire/question.html
@@ -12,25 +12,25 @@
             			<!-- Page title -->
 						<div class="col-xs-12 col-md-9 title-content">
 							<span class="fa fa-search"></span>
-							<h1><strong>Manage Questions</strong></h1>
+							<h1><strong>{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.TITLE'|translate}}</strong></h1>
 						</div>
             			<!-- Breadcrumbs -->
 						<div class="col-md-3 title-breadcrumbs">
-							<span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Question Bank</strong></span>
+							<span><a ui-sref="home">{{'BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.TITLE'|translate}}</strong></span>
 						</div>
 					</div>
 					<div class="row clearfix operations">
 						<div class="save-add col-xs-12 col-sm-6 col-md-8">
               				<!-- Add button -->
-							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddQuestion()" class="btn btn-md btn-outline item-button">
+							<a style="margin-right:20px;" href="" ng-click="goToAddQuestion()" class="btn btn-md btn-outline item-button">
 								<span style="font-size: 17px;" class="fa fa-plus"></span>
-								<span style="font-size: 20px;"><strong>Add</strong></span>
+								<span style="font-size: 20px;"><strong>{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.ADD'|translate}}</strong></span>
 							</a>
 						</div>
 						<!-- Search field -->
 						<div class="search col-xs-12 col-sm-6 col-md-4">
 							<div class="form-group has-feedback" style="margin-bottom: 0">
-							<input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestion(filterValue)" placeholder="Search...">
+							<input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestion(filterValue)" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_LIST.SEARCH'|translate}}">
 								<span class="glyphicon glyphicon-search form-control-feedback"></span>
 							</div>
 						</div>
