Questions section translation completed

--- a/templates/questionnaire/questionnaire-side-menu.html
+++ b/templates/questionnaire/questionnaire-side-menu.html
@@ -17,7 +17,7 @@
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire-create'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Back to Questionnaires</strong></h6>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'QUESTIONNAIRE_MODULE.NAVIGATION_MENU.BACK'|translate}}</strong></h6>
                     </div>
                 </div>
             </div>
@@ -30,7 +30,7 @@
             <div style="height: 10px; border-bottom: 1px solid #6f5499;">
 				<span style="background-color:#e6edfa; padding: 0 10px;">
 					<span class="glyphicon glyphicon-triangle-bottom"></span>
-					<h2>Questionnaire Tools</h2>
+					<h2>{{'QUESTIONNAIRE_MODULE.NAVIGATION_MENU.SUB_TITLE'|translate}}</h2>
 				</span>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-pencil" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questionnaires</strong></h6>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'QUESTIONNAIRE_MODULE.NAVIGATION_MENU.MANAGE_QUESTIONNAIRES'|translate}}</strong></h6>
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/question'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-search" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Manage Questions</strong></h6>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'QUESTIONNAIRE_MODULE.NAVIGATION_MENU.MANAGE_QUESTIONS'|translate}}</strong></h6>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/template-question'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-question-circle-o" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Response Types</strong></h6>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'QUESTIONNAIRE_MODULE.NAVIGATION_MENU.TEMPLATE_QUESTION'|translate}}</strong></h6>
                     </div>
                 </div>
             </div>
@@ -89,11 +89,10 @@
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/publication-tool'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-cloud-upload" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Publication Tools</strong></h6>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>{{'QUESTIONNAIRE_MODULE.NAVIGATION_MENU.PUBLICATION_TOOLS'|translate}}</strong></h6>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
