--- a/templates/questionnaire/cannot.delete.questionnaire.html
+++ b/templates/questionnaire/cannot.delete.questionnaire.html
@@ -1,18 +1,16 @@
 <div class="modal-header">
     <h2 class="modal-title col-xs-12">
-        <span class="fa fa-lock"></span> Questionnaire locked
+        <span class="fa fa-lock"></span> {{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_LOCKED.TITLE'|translate}}
     </h2>
 </div>
 <div class="modal-body">
     <div class="alert alert-danger" role="alert">
-        <strong>Warning</strong><br>
-        <p>
-            This questionnaire has being published already and cannot be deleted.
-        </p>
+        <strong>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_LOCKED.WARNING'|translate}}</strong><br>
+        <p>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_LOCKED.LOCKED'|translate}}</p>
     </div>
     <div class="row">
         <div class="modal-buttons col-xs-12">
-                <input ng-click="cancel()" class="btn btn-primary cancel" type="button" value="Close">
+                <input ng-click="cancel()" class="btn btn-primary cancel" type="button" value="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_LOCKED.CLOSE'|translate}}">
         </div>
     </div>
 </div>
