--- a/templates/questionnaire/delete.questionnaire.html
+++ b/templates/questionnaire/delete.questionnaire.html
@@ -1,25 +1,25 @@
 <div class="modal-header">
-	<h2 class="modal-title col-xs-12">
-		<span class="glyphicon glyphicon-trash"></span> 
-		Delete Questionnaire 
-	</h2>
-	<p class="modal-title-caption col-xs-12">
-		{{questionnaireToDelete.name_EN}} / {{questionnaireToDelete.name_FR}}
-	</p>
+    <h2 class="modal-title col-xs-12">
+        <span class="glyphicon glyphicon-trash"></span>
+        {{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_DELETE.TITLE'|translate}}
+    </h2>
 </div>
 <div class="modal-body">
-	<div class="alert alert-danger" role="alert">
-    <strong>Delete Questionnaire</strong><br>
-    <p>
-      Are you sure you want to delete the questionnaire "{{questionnaireToDelete.name_EN}}" ?
-    </p>
-  </div>
-  <div class="row">
-    <div class="modal-buttons col-xs-12">
-      <form method="post" ng-submit="deleteQuestionnaire()">      
-        <input class="btn btn-primary submit" type="submit" value="Delete">
-        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
-      </form>
+    <div class="alert alert-danger" role="alert">
+        <p><b>{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_DELETE.WARNING'|translate}}</b> {{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_DELETE.WARNING_TEXT'|translate}}</p>
     </div>
-  </div>
+    <div class="alert row">
+        <div class="col-xs-12">
+            <p>{{questionnaireToDelete.name_EN}}</p>
+            <p>{{questionnaireToDelete.name_FR}}</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="modal-buttons col-xs-12">
+            <form method="post" ng-submit="deleteQuestionnaire()">
+                <input class="btn btn-primary submit" type="submit" value="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_DELETE.DELETE'|translate}}">
+                <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'QUESTIONNAIRE_MODULE.QUESTIONNAIRE_DELETE.CANCEL'|translate}}">
+            </form>
+        </div>
+    </div>
 </div>
