Finished translating questionnaire section.

--- a/templates/questionnaire/delete.question.html
+++ b/templates/questionnaire/delete.question.html
@@ -9,8 +9,8 @@
     </div>
     <div class="alert row">
         <div class="col-xs-12">
-            <p>{{questionToDelete.question_EN}}</p>
-            <p>{{questionToDelete.question_FR}}</p>
+            <p ng-bind-html="questionToDelete.question_EN"></p>
+            <p ng-bind-html="questionToDelete.question_FR"></p>
         </div>
     </div>
     <div class="row">
