--- a/templates/questionnaire/delete.template.question.html
+++ b/templates/questionnaire/delete.template.question.html
@@ -1,15 +1,20 @@
 <div class="modal-header">
     <h2 class="modal-title col-xs-12">
-        <span class="glyphicon glyphicon-trash"></span> Delete Response Type
+        <span class="glyphicon glyphicon-trash"></span>{{'QUESTIONNAIRE_MODULE.TEMPLATE_QUESTION_DELETE.TITLE'|translate}}
     </h2>
 </div>
 <div class="modal-body">
     <div class="alert alert-danger" role="alert">
-        <strong>Delete response type</strong><br/>
-        <p>
-            Are you sure you want to delete the response type "{{templateQuestionToDelete.name_EN}} / {{templateQuestionToDelete.name_FR}}" ?
-        </p>
+        <strong>{{'QUESTIONNAIRE_MODULE.TEMPLATE_QUESTION_DELETE.TITLE'|translate}}</strong><br/>
+        <p>{{'QUESTIONNAIRE_MODULE.TEMPLATE_QUESTION_DELETE.WARNING'|translate}}</p>
     </div>
+    <div class="alert row">
+        <div class="col-xs-12">
+            <p ng-bind-html="templateQuestionToDelete.name_EN"></p>
+            <p ng-bind-html="templateQuestionToDelete.name_FR"></p>
+        </div>
+    </div>
+
     <div class="row">
         <div class="modal-buttons col-xs-12">
             <form method="post" ng-submit="deleteQuestion()">
