--- a/templates/questionnaire/edit.template.question.html
+++ b/templates/questionnaire/edit.template.question.html
@@ -1,6 +1,6 @@
 <!-- Modal title -->
 <div class="modal-header">
-    <div class="row col-xs-12"">
+    <div class="row col-xs-12">
         <h2 class="modal-title col-xs-12"><span class="glyphicon glyphicon-pencil"></span>Edit Response Type Template</h2>
     </div>
     <div class="modal-buttons col-xs-12">
