--- a/templates/questionnaire/publication.tool.html
+++ b/templates/questionnaire/publication.tool.html
@@ -12,31 +12,31 @@
 						<!-- Page title -->
 						<div class="col-xs-12 col-md-6 title-content">
 							<span class="fa fa-cloud-upload"></span>
-							<h1><strong>Publication Tools</strong></h1>
+							<h1><strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_LIST.TITLE'|translate}}</strong></h1>
 						</div>
 						<!-- Breadcrumbs -->
 						<div class="col-md-6 title-breadcrumbs">
-							<a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaires</a>
-							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Publication Tools</strong></span>
+							<a ui-sref="home">{{'QUESTIONNAIRE_MODULE.BREADCRUMBS.HOME'|translate}}</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">{{'QUESTIONNAIRE_MODULE.DASHBOARD.TITLE'|translate}}</a>
+							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_LIST.TITLE'|translate}}</strong></span>
 						</div>
 					</div>
 					<div class="row clearfix operations">
 						<div class="save-add col-xs-12 col-sm-6 col-md-8">
 							<!-- Add button -->
-							<a style="width:100px;margin-right:20px;" href="" ng-click="goToAddPublicationTool()" class="btn btn-md btn-outline item-button">
+							<a style="margin-right:20px;" href="" ng-click="goToAddPublicationTool()" class="btn btn-md btn-outline item-button">
 								<span style="font-size: 17px;" class="fa fa-plus"></span>
-								<span style="font-size: 20px;"><strong>Add</strong></span>
+								<span style="font-size: 20px;"><strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_LIST.ADD'|translate}}</strong></span>
 							</a>
                             <!-- Save changes button -->
                             <a href="" ng-click="submitPublishFlags()" class="btn btn-md item-button-success animated" ng-if="changesMade" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false">
                                 <span style="font-size: 17px;" class="glyphicon glyphicon-ok"></span>
-                                <span style="font-size: 20px;"><strong>Save Changes</strong></span>
+                                <span style="font-size: 20px;"><strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_LIST.SAVE'|translate}}</strong></span>
                             </a>
 						</div>
 						<!-- Search field -->
 						<div class="search col-xs-12 col-sm-6 col-md-4">
 							<div class="form-group has-feedback" style="margin-bottom: 0">
-								<input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestionnaire(filterValue)" placeholder="Search...">
+								<input type="text" class="form-control" ng-model="filterValue" ng-change="filterQuestionnaire(filterValue)" placeholder="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_LIST.SEARCH'|translate}}">
 								<span class="glyphicon glyphicon-search form-control-feedback"></span>
 							</div>
 						</div>
